update basic layout css and content

--- a/app/index.html
+++ b/app/index.html
@@ -10,11 +10,12 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="narrow-jumbotron.css">
   <link rel="stylesheet" href="app.css">
 </head>
 <body>
   <div class="container">
-     <div class="header clearfix">
+     <div class="header">
        <nav>
          <ul class="nav nav-pills pull-xs-right">
            <li class="nav-item">
@@ -27,9 +28,16 @@
              <a class="nav-link" href="#">Contact</a>
            </li>
          </ul>
+         <h3 class="text-muted">Spacebook</h3>
        </nav>
-       <h3 class="text-muted">Project name</h3>
      </div>
+
+     <div ng-view></div>
+
+     <footer class="footer">
+       <p>&copy; Zac Baston 2016</p>
+     </footer>
+
    </div>
 
   <!--[if lt IE 7]>
@@ -43,8 +51,9 @@
   -->
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="bower_components/jquery/dist/jquery.js"></script>
+  <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
   <script src="app.js"></script>
-  <script src="facebook/facebook.js"></script>
+  <!-- <script src="facebook/facebook.js"></script> -->
 </body>
 </html>
