add html skeleton, next up angular work

--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,53 @@
      </div>
 
      <div ng-view></div>
+     <div class="row">
+       <div class="col-md-4">
+        <h4>Please Log In</h4>
+        <button class="btn btn-default">Login</button>
+        <br><br>
+        <div class="card">
+          <div class="card-header">
+            <h4 class="card-title">User Info</h4>
+          </div>
+          <div class="card-block">
+            <ul>
+              <li>ID: 1203980</li>
+              <li>First Name: First</li>
+              <li>Last Name: Last</li>
+              <li>Email: first@example.com</li>
+              <li>Gender: Male</li>
+              <li>Locale: Asheville, NC</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-header">
+            <h4 class="card-title">Permissions</h4>
+          </div>
+          <div class="card-block">
+            <ul>
+              <li>Empty</li>
+            </ul>
+
+          </div>
+        </div>
+       </div>
+       <div class="col-md-8">
+         <h3>Welcome to Spacebook!</h3>
+         <form>
+          <div class="form-group">
+            <label>Status Update</label>
+            <textarea rows="5" cols="30" class="form-control"></textarea>
+          </div>
+
+          <button type="submit" class="btn btn-default">Submit</button>
+         </form>
+
+       </div>
+     </div>
+
 
      <footer class="footer">
        <p>&copy; Zac Baston 2016</p>
