fine tune display skeleton

--- a/app/index.html
+++ b/app/index.html
@@ -39,9 +39,7 @@
         <button class="btn btn-default">Login</button>
         <br><br>
         <div class="card">
-          <div class="card-header">
-            <h4 class="card-title">User Info</h4>
-          </div>
+          <h4 class="card-header">User Info</h4>
           <div class="card-block">
             <ul>
               <li>ID: 1203980</li>
@@ -55,9 +53,7 @@
         </div>
 
         <div class="card">
-          <div class="card-header">
-            <h4 class="card-title">Permissions</h4>
-          </div>
+          <h4 class="card-header">Permissions</h4>
           <div class="card-block">
             <ul>
               <li>Empty</li>
