--- a/app/index.html
+++ b/app/index.html
@@ -92,11 +92,12 @@
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
+  <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="bower_components/jquery/dist/jquery.js"></script>
+  <script src="bower_components/ng-facebook/ngFacebook.js"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
   <script src="app.js"></script>
-  <!-- <script src="facebook/facebook.js"></script> -->
+  <script src="facebook/facebook.js"></script>
 </body>
 </html>
