--- a/app/facebook/facebook.html
+++ b/app/facebook/facebook.html
@@ -1,46 +1,65 @@
 <div class="row" ng-controller="FacebookController">
   <div class="col-md-4">
-   <h4>{{ welcomeMessage }}</h4>
-   <div ng-if="isLoggedIn == false">
-     <button class="btn btn-default" ng-click="login()">Login</button>
-   </div>
-   <div ng-if="isLoggedIn == true">
-     <button class="btn btn-default" ng-click="logout()">Logout</button>
-   </div>
-   <br><br>
-   <div class="card">
-     <h4 class="card-header">User Info</h4>
-     <div class="card-block">
-       <ul>
-         <li>ID: 1203980</li>
-         <li>First Name: First</li>
-         <li>Last Name: Last</li>
-         <li>Email: first@example.com</li>
-         <li>Gender: Male</li>
-         <li>Locale: Asheville, NC</li>
-       </ul>
-     </div>
-   </div>
+    <div ng-if="isLoggedIn == true">
+      <a href="{{ userInfo.link }}" target="_blank"><img ng-src="{{ picture }}" alt="profile photo"></a>
+    </div>
+    <br>
+    <h4>{{ welcomeMessage }}</h4>
+    <div ng-if="isLoggedIn === false">
+      <button class="btn btn-default" ng-click="login()">Login</button>
+    </div>
+    <div ng-if="isLoggedIn === true">
+      <button class="btn btn-default" ng-click="logout()">Logout</button>
+    </div>
+    <br><br>
+    <div class="card" ng-if="isLoggedIn == true">
+      <h4 class="card-header">User Info</h4>
+      <div class="card-block">
+        <ul>
+          <li>ID: {{ userInfo.id }}</li>
+          <li>First Name: {{ userInfo.first_name }}</li>
+          <li>Last Name: {{ userInfo.last_name }}</li>
+          <li>Email: {{ userInfo.email }}</li>
+          <li>Gender: {{ userInfo.gender }}</li>
+          <li>Locale: {{ userInfo.locale }}</li>
+        </ul>
+      </div>
+    </div>
 
-   <div class="card">
+   <div class="card" ng-if="isLoggedIn == true">
      <h4 class="card-header">Permissions</h4>
      <div class="card-block">
        <ul>
-         <li>Empty</li>
+         <li ng-repeat="permission in permissions">
+           {{ permission.permission }} - {{ permission.status }}
+         </li>
        </ul>
      </div>
    </div>
   </div>
+
   <div class="col-md-8">
     <h3>Welcome to Spacebook!</h3>
-    <form>
+    <form ng-if="isLoggedIn === true" ng-submit="postStatus()">
      <div class="form-group">
        <label>Status Update</label>
-       <textarea rows="5" cols="30" class="form-control"></textarea>
+       <textarea rows="5" cols="30" class="form-control" ng-model="newPost"></textarea>
      </div>
 
      <button type="submit" class="btn btn-default">Submit</button>
     </form>
-
+    <br><br>
+    <div ng-if="isLoggedIn === true" ng-repeat="post in posts" class="statusBody">
+      <div>
+        <img ng-src="{{ picture }}" alt="profile photo" class="statusImage">
+      </div>
+      <div class="statusText">
+        {{ post.message}}
+        <div class="statusTime">
+          {{ post.created_time | date: 'MMM d, yyyy h:mm a' }}
+        </div>
+      </div>
+      <br>
+    </div>
   </div>
 </div>
